# chem

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
adapters/: bse.py  pubchem.py
basis/: basis_block.py  bse_adapter.py  bse_adaptor_test.py  cartesian.py  cartesian_test.py  contracted_gto.py  grlex.py  grlex_test.py  operators.py
chem/adapters/: bse.py  pubchem.py
chem/basis/: basis_block.py  cartesian.py  operators.py  real_space.py
chem/hartree_fock/: fock.py  one_electron.py  scf.py
chem/integrals/: coulomb.py  kinetic.py  overlap.py
chem/structure/: molecular_basis.py  molecule.py  units.py
hartree_fock/: fock.py  one_electron.py  roothaan.py  scf.py
hflib/adapters/: bse.py
hflib/analysis/: cube_io.py  density.py  grid.py
hflib/basis/: basis_block.py  cartesian.py  real_space.py
hflib/hartree_fock/: fock.py  one_electron.py  quartet.py  scf.py
hflib/integrals/: kinetic.py  overlap.py
hflib/structure/: molecular_basis.py  molecule.py  nuclear.py  real_space.py
integrals/: coulomb.py  coulomb_test.py  gaussian.py  kinetic.py  kinetic_test.py  overlap.py  overlap_test.py
notebooks/: geometry_optimization.ipynb
slaterform/: __init__.py  types.py
slaterform/adapters/: __init__.py  bse.py  pubchem.py
slaterform/analysis/: __init__.py  cube.py  cube_io.py  density.py  grid.py
slaterform/basis/: __init__.py  basis_block.py  cartesian.py  contracted_gto.py  operators.py  real_space.py
slaterform/hartree_fock/: __init__.py  batching.py  density.py  fock.py  one_electron.py  roothaan.py  scf.py
slaterform/integrals/: __init__.py  (+4 more)
structure/: molecular_basis.py  molecule.py
tests/: conftest.py  utils.py
(+49 files in other folders)
