[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chem"
version = "0.1.0"
dependencies = [
    "basis_set_exchange",
    "numpy",
    "pubchempy",
    "pytest",
    "pytest-cov",
    "scipy",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
addopts = "-m 'not slow'"

[tool.coverage.run]
source = ["chem"]
omit = ["tests/*"]
branch = true
